Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-11930

sbi_flags printing broke

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Critical Critical
    • Lustre 2.13.0, Lustre 2.12.1
    • Lustre 2.13.0
    • None
    • 3
    • 9223372036854775807

      Nowadays if we do get_param on lustre-....sbi_flags we get back:

      error: get_param: reading 'llite.lustre-ffff88009a0ca800.sbi_flags': Invalid argument
      

      and then in the kernel

      [  788.311079] LustreError: 10351:0:(lproc_llite.c:967:ll_sbi_flags_seq_show()) lustre: Revise array LL_SBI_FLAGS to match sbi flags please.
      

      The result is of course every test that checks feature flags is now not finding anything it's looking for and skips. in particular al layoutswaps (test 184*) and a bunch of other stuff is now in perma-skip mode.

      This was broken in LU-11825 https://review.whamcloud.com/33912 it appears by removing a flag from LL_SBI_FLAGS which is something that should NEVER be done.

      Also I think we ned to convert that error message into an assertion.

      Problems like here we'd catch sooner and if some client has some flags set incorrectly we are probably ok panicking there as well as there's clearly some unexpected memory corruption or whatnot going on?

            pfarrell Patrick Farrell (Inactive)
            green Oleg Drokin
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: